fix h2 on mobile

--- a/src/components/shared/Header/Header.module.sass
+++ b/src/components/shared/Header/Header.module.sass
@@ -394,6 +394,10 @@ $marginTop: 115px
   .header
     min-height: 650px
 
+    .headerWrap
+      h2
+        font-size: 21px
+
     .socials
       width: auto
       height: 140px
